--- a/src/pages/product/css/product.css
+++ b/src/pages/product/css/product.css
@@ -1,7 +1,7 @@
 .gallery-product {
     display: grid;
     justify-items: center;
-    gap: 0px;
+    gap: 0;
     grid-template-columns: repeat(auto-fit, minmax(350px,1fr));
 }
 
